--- a/settings.json
+++ b/settings.json
@@ -101,6 +101,7 @@
     "brown",
     "pink",
     "diamond",
+    "penisofkonstantin",
     "emerald",
     "peedy",
     "clippy",
@@ -108,6 +109,7 @@
     "gold",
     "orange",
     "yellow",
+    "rpc",
     "floyd",
     "jew",
     "magenta"
