war of NaK and me was ended.

--- a/settings.json
+++ b/settings.json
@@ -110,7 +110,45 @@
       "defaultName": "Anonymous"
     }
   },
-  "consoleOutput": false,
+  "consoleOutput": true,
+  "log": {
+    "info": {
+      "level": "debug",
+      "filename": "./logs/info.log",
+      "maxsize": "1024000",
+      "maxFiles": "3",
+    "handleExceptions": true,
+    "humanReadableUnhandledException": true
+    },
+    "error": {
+			"level": "error",
+			"filename": "./logs/error.log",
+			"maxsize": "1024000",
+			"maxFiles": "1000",
+		"handleExceptions": true,
+		"humanReadableUnhandledException": true
+		},
+    "access": {
+			"level": "debug",
+			"filename": "./logs/access.log",
+			"maxsize": "1024000",
+			"maxFiles": "3",
+		"handleExceptions": true,
+		"humanReadableUnhandledException": true
+		}
+  },
+  "Themes": [
+    "default",
+    "vaporwave",
+    "xp", 
+    "bonziverse",
+    "nature",
+    "space",
+    "da_vinci",
+    "aquarium",
+    "dark",
+    "light"
+],
   "bonziColors": [
     "purple",
     "blue",
@@ -137,6 +175,8 @@
   ],
   "banLength": 1440,
   "port": 3000,
+  "channel": "bonkeyworld-anony-ed",
+	"server_mode": "default",
   "express": {
     "serveStatic": true
   }
